Fix checkstyle, improve comments